# cyan

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README.md  config.h.in  cyan-config.cmake.in  cyanConfig.cmake.in  cyanConfigVersion.cmake.in  cyan_config.h.in
.github/workflows/: main.yml
cmake/: FindLAPACKE.cmake  Findnetpbm.cmake  Findtirpc.cmake  archive.txt
datasets/: CMakeLists.txt  lena.ppm
datasets/DeltaE/: COPYRIGHT
datasets/images/: lena.tiff
include/: camera.h  cyan.h  image.h
include/3dmodel/: cloud.h  mesh.h  point.h
include/algebra/: matrix.h  quaternion.h  rotation.h  tmatrix.h  vector3d.h
include/color/: color.h
include/cyan/: cyan.h  image.h
include/cyan/3dmodel/: aabb.h  cloud.h  mesh.h  scene.h
include/cyan/color/: color.h
include/cyan/common/: error.h  utils.h
include/cyan/image/: complex.h  fourier.h  image.h  sampling.h  transforms.h
include/image/: image.h  marker.h
include/io/: image_io.h  io.h
include/structs/: kdtree.h  kdtreer.h  rtree.h  vptree.h
include/vision/: camera.h  pinhole.h
po/: CMakeLists.txt  LINGUAS  cyan.pot
po/de/: cyan.mo  cyan.po
po/fr/: cyan.mo  cyan.po
po/ru/: cyan.mo  cyan.po
src/: cloud.c  color.c  complex.c  fourier.c  image.c  image_io_ppm.c  image_load_ppm.c  image_save_ppm.c  load_png.c  pinhole.c  sampling.c  transforms.c
src/3dmodel/: cloud.c
src/backup_onevision/: cloud_add_point.c  cloud_allocate_color.c  cloud_allocate_data.c  cloud_build_tree.c  cloud_clone.c  cloud_free.c  cloud_merge.c  cloud_new.c  cloud_remove_point.c  cloud_strip_colors.c  cloud_strip_data.c  cloud_strip_tree.c  config.h  kdtree_build.c  kdtreer_build.c
src/color/: LCHab_to_XYZ.c  LCHuv_to_XYZ.c  Lab_to_XYZ.c  Luv_to_XYZ.c  RGB_to_XYZ.c  XYZ_to_LCHab.c  XYZ_to_LCHuv.c  XYZ_to_Lab.c  XYZ_to_Luv.c  XYZ_to_RGB.c  XYZ_to_xyY.c  color.c  refwhite_get_name.c  refwhite_get_xyz.c  rgb_get_name.c  rgb_to_xyz.c  xyY_to_XYZ.c
src/common/: error.c
src/file/: cyan_file.c  cyan_file.h  image_load.c  image_save.c
src/image/: image.c
src/netpbm/: image_load_ppm.c  image_save_ppm.c
src/ppm/: image_load_ppm.c  image_save_ppm.c
test/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake
test/color/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  refwhite_get_xyz  refwhite_get_xyz.c  rgb_to_xyz  rgb_to_xyz.c
test/colorspaces/: hsv2rgb.c  rgb2hsv.c
test/fourier1D/: CMakeLists.txt  fourier1D.c
test/image/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  image  image.c
test/lapacke/: CMakeLists.txt
test/markers/: CMakeLists.txt  print_all_markers.c
test/reference_output/: refwhite_get_xyz.output  rgb_to_xyz.output
test/test1D/: CMakeLists.txt  test1D.c
tests/: CMakeLists.txt
tests/colorspaces/: hsv2rgb.c  rgb2hsv.c
tests/markers/: print_all_markers.c
tests/ppm_files/: CMakeLists.txt  load_ppm.c  save_ppm.c
tests/ppm_files/ref_input/: lena_P6.ppm
tests/ppm_files/ref_output/netpbm_OFF/: 01_save_ppm.ppm  03_P68b.ppm
tests/ppm_files/ref_output/netpbm_ON/: 01_save_ppm.ppm
tests/test_hsv/: CMakeLists.txt  hsv2rgb.c  rgb2hsv.c
tests/test_simple/: CMakeLists.txt  main.c
tests/tests_ppm/: CMakeLists.txt  load_ppm.c  save_ppm.c
tools/: CMakeLists.txt  TODO.txt
tools/cyan_image_display/: CMakeLists.txt
tools/cyan_image_display/src/: main.c
tools/cyan_imageviewer/: CMakeLists.txt
tools/cyan_imageviewer/src/: load_png.c  load_png.h  main.c
tools/cyan_load_png/: CMakeCache.txt  CMakeLists.txt
tools/cyan_load_png/archive/: cluster.c  cluster.h
tools/cyan_load_png/src/: load_png.c  load_png.h  main.c
tools/cyan_transforms/: CMakeLists.txt
tools/cyan_transforms/src/: main.c  transforms.c  transforms.h
